--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             "'Cung trăng có Cuội có Hằng ✿ Trong tim mình có 'Tím Xanh'  bạt ngàn ✿ Vầng trăng sáng dịu đêm thanh ✿ Tựa tranh tình ái đêm thu ngọt ngào ✿ Từ thuở năm nảo năm nao ✿ Mong bồ ngời sáng tựa vì sao trăng ◠‿・ —☆' - from Tuykhônghoànhảonhưng Taochếtvìocd",
             "'chim tôi to nhất mấy con vợ nhé - Hiorin",
             "'Mong mọi người trong shipdom Trung Thu vui vẻ với gia đình người thân, và mong shipdom sẽ ngày càng phát triển tròn đầy như trăng đêm rằm' - Vân Anh",
-            "'Chúc mọi người trung thu zui zẻ, phát tài phát lộc để nuôi yoichi 🫰🫰' - Vân Anh",
+            "'Chúc mọi người trung thu zui zẻ, phát tài phát lộc để nuôi yoichi 🫰🫰' - Taraty",
             "'Chúc mọi người có thêm một năm trung thu vui vẻ, được tận hưởng thời gian cùng những người xung quanh và shipdom được ăn thêm nhiều hàng cp mình thích nha' - Băng đô ôm coty",
             "'Chúc shipdom reoisa càng ngày càng giàu 🌚🫶' - MI Rin",
             "'Chúc shipdom sớm hồi máu để năm sau quẩy với nhau tiếp 🤣🤣' - Andrea Cordelia",
@@ -392,5 +392,6 @@
 </body>
 
 </html>
+
 
 
